2008-11-03  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/symbol-db-engine.c
	(sdb_engine_get_file_defined_id), (sdb_engine_populate_db_by_tags),
	(sdb_engine_init), (symbol_db_engine_file_exists),
	(symbol_db_engine_project_exists),
	(symbol_db_engine_add_new_project), (sdb_engine_add_new_language),
	(sdb_engine_add_new_file), (symbol_db_engine_add_new_files),
	(sdb_engine_add_new_sym_type), (sdb_engine_add_new_sym_kind),
	(sdb_engine_add_new_sym_access),
	(sdb_engine_add_new_sym_implementation),
	(sdb_engine_add_new_heritage),
	(sdb_engine_add_new_scope_definition),
	(sdb_engine_add_new_tmp_heritage_scope),
	(sdb_engine_second_pass_update_scope_1),
	(sdb_engine_second_pass_update_heritage),
	(sdb_engine_add_new_symbol),
	(symbol_db_engine_update_project_symbols),
	(sdb_engine_walk_down_scope_path),
	(symbol_db_engine_get_class_parents_by_symbol_id),
	(symbol_db_engine_get_class_parents),
	(symbol_db_engine_get_global_members_filtered),
	(symbol_db_engine_get_scope_members_by_symbol_id_filtered),
	(symbol_db_engine_get_scope_members_by_symbol_id),
	(symbol_db_engine_get_scope_members),
	(symbol_db_engine_get_current_scope),
	(symbol_db_engine_get_file_symbols),
	(symbol_db_engine_get_symbol_info_by_id),
	(symbol_db_engine_find_symbol_by_name_pattern),
	(symbol_db_engine_get_parent_scope_id_by_symbol_id),
	(symbol_db_engine_find_symbol_by_name_pattern_filtered),
	(symbol_db_engine_get_files_for_project):
	Memory pool object system. Now the hundreds of GValue used in the 
	population/queries are reused instead of being created/destroyed. This 
	gains 5-10 ms in some cases but there's still some profiling work to do.

	* plugins/symbol-db/symbol-db-view-search.c
	(sdb_view_search_model_filter):
	fixed bug #558930.

2008-11-03  James Liggett  <jrliggett@cox.net>

	* libanjuta/anjuta-debug.h:
	Fixed some mistakes from revision 4366. Properly detect GCC. 
	Modify DEBUG_PRINT macro to use g_debug instead of g_message, and print the